<resources>
    <string name="app_name">PhotoFocus</string>
    <string name="load">Загрузить</string>
    <string name="save">Сохранить</string>
    <string name="framing">Кадрирование</string>
    <string name="correction">Коррекция</string>
    <string name="text">Текст</string>
    <string name="autocorrection">Автокоррекция</string>
    <string name="templates">Шаблоны</string>
    <string name="_1_3">16:9</string>
    <string name="_1_2">1:2</string>
    <string name="_1_1">1:1</string>
    <string name="fixcropping">Соотношение \n сторон</string>
    <string name="croping">Обрезать</string>
    <string name="rotation">Повернуть</string>
    <string name="cropOriginal">Оригинал</string>
    <string name="crop1_4">4:3</string>
    <string name="crop1_5">3:1</string>
    <string name="crop1_6">A4</string>
    <string name="hor">Отразить \n по гор</string>
    <string name="vert">Отразить \n по верт</string>
    <string name="right">Направо</string>
    <string name="left">Налево</string>
    <string name="color">Цвет</string>
    <string name="light">Свет</string>
    <string name="vignette">Виньетка</string>
    <string name="blur">Размытие фона</string>
    <string name="noise">Зерно</string>
    <string name="tone">Оттенок</string>
    <string name="saturation">Насыщенность</string>
    <string name="bright">Яркость</string>
    <string name="exposition">Экспозиция</string>
    <string name="contrast">Контрастность</string>
    <string name="_0">0</string>
    <string name="back">back</string>
    <string name="sign_in">Войти</string>
    <string name="color_text">Цвет текста</string>
    <string name="font">Шрифты</string>
    <string name="enter_text">Enter text</string>
    <string name="user_templates">Пользовательские шаблоны</string>
    <string name="no">Нет</string>
    <string name="sign_in_guest">Войти как гость</string>
    <string name="Sign_in">Войти в аккаунт</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="get_code">Получить код</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter_code">Введите код, отправленный на указанную почту</string>
    <string name="mail">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="password2">Повторите пароль</string>
    <string name="enter_code2">Введите код</string>
    <string name="later">Позже</string>
    <string name="templates_name">Введите название шаблона \n (не больше 8 символов)</string>
    <string name="name_templates2">Название шаблона</string>
    <string name="create_templates">Создать шаблон</string>
    <string name="question_templates">Хотите сохранить текущие настройки обработки в \"Пользовательские шаблоны\"?</string>
    <string name="yes">Да</string>
    <string name="applyChange"><![CDATA[Применить изменения к \"%s</string>\" или создать новый шаблон?]]></string>
    <string name="create_new">Создать новый</string>
    <string name="apply">Применить</string>
</resources>