<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cropBtnsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:visibility="gone"
    >

    <HorizontalScrollView
        android:id="@+id/cropToolsLayout"
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/fixCrop"
            android:orientation="horizontal"

            android:paddingHorizontal="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="@+id/cropMenu">

            <TextView
                android:id="@+id/cropOriginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/cropOriginal"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/crop1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/_1_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/crop1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/_1_2"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/crop1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/_1_3"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:id="@+id/crop1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/crop1_4"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:id="@+id/crop1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/crop1_5"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:id="@+id/crop1_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/crop1_6"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/cropMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/cropToolsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/fixcroping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/fixcroping"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/croping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/croping"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/rotation"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>