<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserTemplates" android:background="@color/gray">

    <LinearLayout
        android:id="@+id/templatesQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_templates"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/yes"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/button"
            app:cornerRadius="@dimen/_20sdp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/no"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/button"
            app:cornerRadius="@dimen/_20sdp" />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/createTemplates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/templates_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_50sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameTemplates"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/edittext_background"
            android:alpha="0.8"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/name_templates2"
            android:layout_marginBottom="@dimen/_20sdp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateTemplates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/save"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/button"
            app:cornerRadius="@dimen/_20sdp" />

    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>