<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization"
    android:background="@color/gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Вход"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_50sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/edittext_background"
            android:alpha="0.8"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:hint="@string/mail"
            />
        <EditText
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/edittext_background"
            android:alpha="0.8"
            android:maxLines="1"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/button"
            app:cornerRadius="@dimen/_20sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_50sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"
            android:text="Еще нет аккаунта?"/>
        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"
            android:text="@string/register"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>